servelet codes/commands me.txt
Microsoft Windows [Version 6.1.7601]
Copyright (c) 2009 Microsoft Corporation.  All rights reserved.

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36>set CATALINA_HOME=D:\ap
ache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36>set JAVA_HOME=C:\Progra
m Files\Java\jdk1.8.0_131

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36>set PATH=%JAVA_HOME%\bi
n;%CATATLINA_HOME%\bin;%PATH%

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36>bin\startup.bat
Using CATALINA_BASE:   "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
"
Using CATALINA_HOME:   "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
"
Using CATALINA_TMPDIR: "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
\temp"
Using JRE_HOME:        "C:\Program Files\Java\jdk1.8.0_131"
Using CLASSPATH:       "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
\bin\bootstrap.jar;D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\bin\
tomcat-juli.jar"
D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36>cd webapps

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps>cd hello-app

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps\hello-app>cd WE
B-INF

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps\hello-app\WEB-I
NF>set classpath=%CATALINA_HOME%\lib\servlet-api.jar;.

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps\hello-app\WEB-I
NF>javac -d classes src\DateServlet.java
javac: file not found: src\DateServlet.java
Usage: javac <options> <source files>
use -help for a list of possible options

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps\hello-app\WEB-I
NF>javac -d classes src\DataServelet.java
src\DataServelet.java:11: error: class DateServlet is public, should be declared
 in a file named DateServlet.java
public class DateServlet extends HttpServlet{
       ^
1 error

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps\hello-app\WEB-I
NF>javac -d classes src\DateServlet.java

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps\hello-app\WEB-I
NF>javac -d classes src\DateServlet.java

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\webapps\hello-app\WEB-I
NF>cd ../../..

D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36>bin\startup.bat
Using CATALINA_BASE:   "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
"
Using CATALINA_HOME:   "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
"
Using CATALINA_TMPDIR: "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
\temp"
Using JRE_HOME:        "C:\Program Files\Java\jdk1.8.0_131"
Using CLASSPATH:       "D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36
\bin\bootstrap.jar;D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36\bin\
tomcat-juli.jar"
D:\apache-tomcat-8.0.36-windows-x64\apache-tomcat-8.0.36>


